# RasterTools

./: .gitignore  README.md  README.rst  notes.txt  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/scripts/: bump_version.py
.github/workflows/: bump_version.yml  docs_final.yml  docs_pr.yml  unit_tests.yml  unittests.yml
docs/: README.md  conf.py  index.html  index.rst  requirements.txt  tutorials.rst
docs/_templates/: footer_start.html
docs/api/: index.rst
docs/api/_autosummary/: rastertools.raster.default_summary_func.rst  rastertools.raster.extract_xy_info_from_raster.rst  rastertools.raster.get_tiff_tags.rst  rastertools.raster.init_sparce_matrix.rst  rastertools.raster.interpolate_at_weight_data.rst  rastertools.raster.is_interior.rst  rastertools.raster.print_status.rst  rastertools.raster.raster_clip.rst  rastertools.raster.raster_clip_single.rst  rastertools.raster.raster_clip_weighted.rst  rastertools.raster.rst  rastertools.raster.subset_matrix_for_clipping.rst  rastertools.raster.summary_entry.rst  rastertools.shape.rst  (+21 more)
docs/tutorials/: README.rst  tut_dotnames.ipynb  tut_pop_clipping.ipynb  tut_shape_subdivision.ipynb
examples/: README.md
examples/shape_subdivide/: make03_shapedivide.py  shape_subdivision.py  subdivision.qgz
examples/worldpop/: README.md  compare.py  worldpop_clipping.py  worldpop_zonal_stats.py
examples/worldpop-gadm/: README.md  worldpop.py
rastertools/: __init__.py  data.py  etl.py  raster.py  shape.py  utils.py  version.py
tests/: requirements-test.txt  requirements-tools.txt  test_download.py  test_raster.py  test_scenarios.py  test_shape.py  test_tools_compare.py
tests/data/: IHME_MCV1_2012_MEAN_test.tif  cod_2012_1km_aggregated_unadj_test.tif
(+5 files in other folders)
